worked on config file and http request

--- a/Lizzie/Base.lproj/Main.storyboard
+++ b/Lizzie/Base.lproj/Main.storyboard
@@ -87,6 +87,14 @@
                                     <constraint firstItem="kOb-B6-Xlc" firstAttribute="leading" secondItem="pS6-JN-u5o" secondAttribute="leading" constant="10" id="rVj-HG-QOR"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xmk-99-zLM">
+                                <rect key="frame" x="164" y="575" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="sendBioSnapshot:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vyf-VQ-WOo"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.76078431372549016" green="0.82352941176470584" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -102,6 +110,7 @@
                         <outlet property="eventTextField" destination="N7K-nA-gcy" id="mwl-FC-srO"/>
                         <outlet property="eventTextLabel" destination="4q5-Up-v2l" id="vO3-lO-4OH"/>
                         <outlet property="heartrateChart" destination="QWu-G5-gRf" id="uqe-E7-8hp"/>
+                        <outlet property="requestTest" destination="Xmk-99-zLM" id="wiV-D4-zPF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
