--- a/Lizzie WatchKit App/Base.lproj/Interface.storyboard
+++ b/Lizzie WatchKit App/Base.lproj/Interface.storyboard
@@ -26,17 +26,21 @@
                                 </label>
                             </items>
                         </group>
-                        <button width="1" alignment="center" title="Start" id="iNm-FD-Dqu">
+                        <button width="1" height="33" alignment="center" title="Start" id="iNm-FD-Dqu">
                             <connections>
                                 <action selector="didTapButton" destination="AgC-eL-Hgc" id="Gdw-ou-Tb4"/>
                             </connections>
                         </button>
-                        <label alignment="left" text="Label" id="dbN-gv-Kix"/>
+                        <button width="1" height="32" alignment="left" title="Mark Event" id="JRJ-Z8-l9b">
+                            <connections>
+                                <action selector="markEventButtonPress" destination="AgC-eL-Hgc" id="OIf-bC-M2r"/>
+                            </connections>
+                        </button>
                     </items>
                     <connections>
-                        <outlet property="aLabel" destination="dbN-gv-Kix" id="sF6-Nr-ZhV"/>
                         <outlet property="controlButton" destination="iNm-FD-Dqu" id="eMe-9U-iM4"/>
                         <outlet property="heartRateLabel" destination="q60-id-Pm7" id="gxC-k9-Omc"/>
+                        <outlet property="markEventButton" destination="JRJ-Z8-l9b" id="39a-kK-UpM"/>
                     </connections>
                 </controller>
             </objects>
