--- a/Lizzie WatchKit App/Base.lproj/Interface.storyboard
+++ b/Lizzie WatchKit App/Base.lproj/Interface.storyboard
@@ -14,6 +14,7 @@
             <objects>
                 <controller title="Lizzie" id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Lizzie_WatchKit_Extension">
                     <items>
+                        <label alignment="left" text="Label" id="wqB-R6-bEy"/>
                         <group width="1" alignment="right" spacing="5" id="Omy-g0-taR">
                             <items>
                                 <label alignment="left" text="Label" id="8Qo-wJ-bjj"/>
@@ -43,6 +44,7 @@
                         <outlet property="controlButton" destination="iNm-FD-Dqu" id="eMe-9U-iM4"/>
                         <outlet property="heartRateLabel" destination="q60-id-Pm7" id="gxC-k9-Omc"/>
                         <outlet property="markEventButton" destination="JRJ-Z8-l9b" id="39a-kK-UpM"/>
+                        <outlet property="syncingStateLabel" destination="wqB-R6-bEy" id="Lz7-tB-eHj"/>
                         <outlet property="watchBioSampleCnt" destination="8Qo-wJ-bjj" id="kcB-NH-p3s"/>
                         <outlet property="watchMarkEventCnt" destination="ndt-c8-eZv" id="p9E-Hw-r9z"/>
                     </connections>
